[gd_scene load_steps=50 format=3 uid="uid://fvq6xrladdbx"]

[ext_resource type="Script" path="res://characters/player_cat.gd" id="1_7vhfn"]
[ext_resource type="Texture2D" uid="uid://bnnlcfpjp08r3" path="res://art/Characters/Premium Charakter Spritesheet.png" id="2_s1rsj"]
[ext_resource type="Texture2D" uid="uid://dp28g6bnh72rp" path="res://art/Tilesets/Water.png" id="3_svm7j"]
[ext_resource type="PackedScene" uid="uid://cpu8sebru3wf" path="res://game_components/inventory_container.tscn" id="4_nhakm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b58jl"]
size = Vector2(12, 6)

[sub_resource type="Animation" id="Animation_gh8oh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_s50dq"]
resource_name = "axe_swing_down"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [128, 129, 130, 131, 132, 133, 134, 135]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"execute_attack"
}]
}

[sub_resource type="Animation" id="Animation_xepa1"]
resource_name = "axe_swing_left"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [144, 145, 146, 147, 148, 149, 150, 151]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"execute_attack"
}]
}

[sub_resource type="Animation" id="Animation_nqqhn"]
resource_name = "axe_swing_right"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [152, 153, 154, 155, 156, 157, 158, 159]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"execute_attack"
}]
}

[sub_resource type="Animation" id="Animation_7c836"]
resource_name = "axe_swing_up"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [136, 137, 138, 139, 140, 141, 142, 143]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"execute_attack"
}]
}

[sub_resource type="Animation" id="Animation_2feeh"]
resource_name = "idle_down"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_67sa4"]
resource_name = "idle_left"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_vwtjp"]
resource_name = "idle_right"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_ahay3"]
resource_name = "idle_up"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_csicb"]
resource_name = "run_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [68, 69, 70, 71, 72, 73, 74, 75]
}

[sub_resource type="Animation" id="Animation_a1o84"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_m0top"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_0afwb"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="Animation" id="Animation_adty3"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kfrs1"]
_data = {
"RESET": SubResource("Animation_gh8oh"),
"axe_swing_down": SubResource("Animation_s50dq"),
"axe_swing_left": SubResource("Animation_xepa1"),
"axe_swing_right": SubResource("Animation_nqqhn"),
"axe_swing_up": SubResource("Animation_7c836"),
"idle_down": SubResource("Animation_2feeh"),
"idle_left": SubResource("Animation_67sa4"),
"idle_right": SubResource("Animation_vwtjp"),
"idle_up": SubResource("Animation_ahay3"),
"run_down": SubResource("Animation_csicb"),
"walk_down": SubResource("Animation_a1o84"),
"walk_left": SubResource("Animation_m0top"),
"walk_right": SubResource("Animation_0afwb"),
"walk_up": SubResource("Animation_adty3")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_88cq2"]
animation = &"axe_swing_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kpuwm"]
animation = &"axe_swing_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j2dsy"]
animation = &"axe_swing_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_os7qv"]
animation = &"axe_swing_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_uxge5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_88cq2")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_kpuwm")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_j2dsy")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_os7qv")
blend_point_3/pos = Vector2(1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6vcca"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_wpbmc"]
states/Start/position = Vector2(802, 100)
transitions = ["Start", "End", SubResource("AnimationNodeStateMachineTransition_6vcca")]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u0xrr"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_p0v6x"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jto2i"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pin5m"]
animation = &"idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_n174s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_u0xrr")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_p0v6x")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_jto2i")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_pin5m")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7wppf"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1q318"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0q65b"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a68cx"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_p1637"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7wppf")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_1q318")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_0q65b")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_a68cx")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8x2c"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cepq1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_opmqw"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d875h"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wv1wk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4hguc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4ny12"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_umxpe"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_q1a0n"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_f7ppk"]
states/AxeSwing/node = SubResource("AnimationNodeBlendSpace2D_uxge5")
states/AxeSwing/position = Vector2(427.029, 199)
states/AxeSwing_finished/node = SubResource("AnimationNodeStateMachine_wpbmc")
states/AxeSwing_finished/position = Vector2(427.029, 270)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_n174s")
states/Idle/position = Vector2(351.029, 105)
states/Start/position = Vector2(143, 112)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_p1637")
states/Walk/position = Vector2(492.029, 105)
transitions = ["Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_j8x2c"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_cepq1"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_opmqw"), "AxeSwing", "Walk", SubResource("AnimationNodeStateMachineTransition_d875h"), "Walk", "AxeSwing", SubResource("AnimationNodeStateMachineTransition_wv1wk"), "AxeSwing", "Idle", SubResource("AnimationNodeStateMachineTransition_4hguc"), "Idle", "AxeSwing", SubResource("AnimationNodeStateMachineTransition_4ny12"), "AxeSwing", "AxeSwing_finished", SubResource("AnimationNodeStateMachineTransition_umxpe"), "AxeSwing_finished", "AxeSwing", SubResource("AnimationNodeStateMachineTransition_q1a0n")]
graph_offset = Vector2(-225.565, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7rosd"]
size = Vector2(10, 7.99534)

[sub_resource type="CircleShape2D" id="CircleShape2D_vwy02"]
radius = 7.0

[node name="PlayerCat" type="CharacterBody2D"]
process_mode = 1
script = ExtResource("1_7vhfn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_s1rsj")
hframes = 8
vframes = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_b58jl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kfrs1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_f7ppk")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/AxeSwing/blend_position = Vector2(-0.0474074, -0.944099)
parameters/Idle/blend_position = Vector2(-0.0148148, 0.710559)
parameters/Walk/blend_position = Vector2(-0.0133333, 0.430435)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 8)

[node name="InteractionComponents" type="Node2D" parent="."]
z_index = 1

[node name="InteractionDirection" type="Marker2D" parent="InteractionComponents"]

[node name="InteractionArea" type="Area2D" parent="InteractionComponents/InteractionDirection"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponents/InteractionDirection/InteractionArea"]
position = Vector2(0, 6)
scale = Vector2(0.798512, 0.798512)
shape = SubResource("RectangleShape2D_7rosd")

[node name="AttackArea" type="Area2D" parent="InteractionComponents/InteractionDirection"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionComponents/InteractionDirection/AttackArea"]
position = Vector2(0, 8)
scale = Vector2(1.12, 0.660342)
shape = SubResource("CircleShape2D_vwy02")

[node name="InteractLabel" type="Label" parent="InteractionComponents"]
offset_left = -72.0
offset_top = -21.0
offset_right = 478.0
offset_bottom = 5.0
scale = Vector2(0.260058, 0.361097)
horizontal_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -12.0
offset_top = 8.0
offset_right = 52.0
offset_bottom = 24.0
scale = Vector2(0.386464, 0.0798319)
texture_progress = ExtResource("3_svm7j")

[node name="InventoryContainer" parent="." instance=ExtResource("4_nhakm")]
visible = false
position = Vector2(-245, -119)

[connection signal="area_entered" from="InteractionComponents/InteractionDirection/InteractionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/InteractionDirection/InteractionArea" to="." method="_on_interaction_area_area_exited"]
[connection signal="area_entered" from="InteractionComponents/InteractionDirection/AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/InteractionDirection/AttackArea" to="." method="_on_attack_area_area_exited"]
